# halcyon-c

./: .gitignore  CMakeLists.txt  README.md  generate_solution.bat  run_tests.bat  run_tests.sh
.github/workflows/: cmake-multi-platform.yml  github-actions-demo.yml
doc/: SPEC.md
include/: halcyon.h
src/: halc_allocators.c  halc_allocators.h  halc_errors.c  halc_errors.h  halc_files.c  halc_files.h  halc_parser.c  halc_parser.h  halc_story.h  halc_strings.c  halc_strings.h  halc_tokenizer.c  halc_tokenizer.h  halc_types.h  halcyon.c  halcyon_test.c  halcyon_test.cpp
testfiles/: random_utf8.halc  sample.halc  storySimple.halc  stress_easy.halc
testfiles/test_story/: intro.halc
testfiles/test_story/hms_zephyr/characters/: bains.halc  jakob.halc
